@@ -5,6 +5,7 @@
   DEVELOPMENT STATE
 
     o  OpenSSL 0.9.9:  Under development...
+    o  OpenSSL 0.9.8l: Released on November   5th, 2009
     o  OpenSSL 0.9.8k: Released on March     25th, 2009
     o  OpenSSL 0.9.8j: Released on January    7th, 2009
     o  OpenSSL 0.9.8i: Released on September 15th, 2008
